# hticketiser

./: LICENSE  README.md  hticketiser.cabal  stan.html  tickets.yaml
.hie/: API.hie  Config.hie  Jira.hie  Main.hie  ParserSpec.hie  Story.hie  Tickets.hie  YamlSpec.hie
src/: API.hs  Api.hs  Config.hs  Jira.hs  Main.hs  Story.hs  Tickets.hs
test/: ParserSpec.hs  Spec.hs  YamlSpec.hs
