cabal-version:       2.2
name:                hticketiser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rberenguel/hticketiser#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ruben Berenguel
copyright:           2020 Ruben Berenguel
category:            Misc
build-type:          Simple
extra-source-files:  README.md

common deps
  build-depends:       base >= 4.7 && < 5, text, 
                       bytestring, raw-strings-qq, 
                       yaml, parsec, aeson, aeson-pretty, 
                       http-conduit, http-types, 
                       directory, filepath
  default-language:    Haskell2010
  other-modules:       Tickets, API, Jira, Config
  ghc-options:         -fwarn-incomplete-patterns -fwarn-unused-imports -Werror=incomplete-patterns

executable hticketiser
  import:              deps
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       optparse-applicative, hspec, QuickCheck

test-suite tests
  import:              deps
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       hspec, QuickCheck